style(bug-624): add comments

--- a/src/app/bug-624/bug-624.component.html
+++ b/src/app/bug-624/bug-624.component.html
@@ -9,10 +9,17 @@
 
     <div><strong>Preview</strong></div>
     <span>
+      <!-- Adding entire array for elements input works -->
        <ng-template let-rowInput let-last="last" ngFor [ngForOf]="addedElements">
            <td-dynamic-forms [elements]="rowInput">
             </td-dynamic-forms>
        </ng-template>
+
+      <!-- appending elements array fails -->
+       <!--<ng-template let-rowInput let-last="last" ngFor [ngForOf]="addedElements">-->
+           <!--<td-dynamic-forms [elements]="rowInput">-->
+            <!--</td-dynamic-forms>-->
+       <!--</ng-template>-->
 
     </span>
 
